force-app/main/default/objects/Contact/fields/Email_Status__c.field-meta.xml
<CustomField>
    <fullName>Email_Status__c</fullName>
    <label>Email Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clicked</fullName>
            </value>
            <value>
                <fullName>Opened</fullName>
            </value>
            <value>
                <fullName>double clicked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>