force-app/main/default/objects/Contact/fields/Hard_Email_Bounce__c.field-meta.xml
<CustomField>
    <fullName>Hard_Email_Bounce__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hard Email Bounce</label>
    <type>Checkbox</type>
</CustomField>