force-app/main/default/objects/Contact/fields/Sync_to_Marketo__c.field-meta.xml
<CustomField>
    <fullName>Sync_to_Marketo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync to Marketo</label>
    <type>Checkbox</type>
</CustomField>